hw1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw1-app
  template:
    metadata:
      labels:
        app: hw1-app
    spec:
      containers:
        - name: hw1
          image: nik1202/hw1:v1
          ports:
            - name: web
              containerPort: 8000
