hw1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw1-service
spec:
  selector:
    app: hw1-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
